[package]
name = "kinode_process_lib"
description = "A library for writing Kinode processes in Rust."
version = "0.8.2"
edition = "2021"
license-file = "LICENSE"
homepage = "https://kinode.org"
repository = "https://github.com/kinode-dao/process_lib"

[dependencies]
alloy-primitives = "0.7.0"
alloy = { version = "0.1.1", features = [
    "json-rpc",
    "rpc-types",
] }
anyhow = "1.0"
bincode = "1.3.3"
http = "1.0.0"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rmp-serde = "1.1.2"
thiserror = "1.0"
url = "2.4.1"
wit-bindgen = "0.24.0"
