[package]
name = "kinode_process_lib"
description = "A library for writing Kinode processes in Rust."
version = "0.10.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://kinode.org"
repository = "https://github.com/kinode-dao/process_lib"

[features]
logging = ["dep:color-eyre", "dep:tracing", "dep:tracing-error", "dep:tracing-subscriber"]

[dependencies]
alloy-primitives = "0.7.6"
alloy-sol-macro = "0.7.6"
alloy-sol-types = "0.7.6"
alloy = { version = "0.1.3", features = [
    "json-rpc",
    "rpc-types",
] }
anyhow = "1.0"
bincode = "1.3.3"
color-eyre = { version = "0.6", features = ["capture-spantrace"], optional = true }
http = "1.0.0"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
rand = "0.8"
rmp-serde = "1.1.2"
thiserror = "1.0"
tracing = { version = "0.1", optional = true }
tracing-error = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "std"], optional = true }
url = "2.4.1"
wit-bindgen = "0.24.0"
